--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body {
     color: #fff;
 }
 
+/* первый контейнер */
+/* начало */
 .container-nav {
     background-image: linear-gradient(to top, #222222, #22222200), url(../images/main-picture.png);
     background-repeat: no-repeat;
@@ -23,9 +25,6 @@ body {
     padding-right: 0;
 }
 
-.link-3 {
-    padding-right: 0;
-}
 .container {
     margin: 0 auto;
     padding: 0 135px 100px 135px;
@@ -35,6 +34,7 @@ body {
 .navbar-dark {
     padding-top: 35px;
 }
+/* конец */
 
 /* текст перед кнопкой */
 .header-info {
@@ -66,6 +66,8 @@ body {
     margin-bottom: 126px;
 }
 
+/* втрой контейнер */
+/* начало */
 .container-work {
     background-color: #222222;
 }
@@ -74,6 +76,7 @@ body {
     font-size: 25px;
     margin-bottom: 10px;
 }
+/* конец */
 
 /* footer */
 /* начало */
@@ -100,6 +103,8 @@ body {
     color: #999999;
     padding-bottom: 39px;
 }
+/* конец */
+
 
 @media (max-width:452px) {
     .container-nav {
